update footer und header

--- a/Impressum.html
+++ b/Impressum.html
@@ -16,10 +16,16 @@
         <header class="header">
 
             <nav class="navigation container">
+                <a href="index.html">
+                    <img src="Images/Alle Seiten/00_logo_nara.svg" alt="Logo Nara" class="naralogo">
+                </a>
                 <ul class="navigation-list">
                     <li><a class="navigation-link" href="angebot.html">Angebot</a></li>
                     <li><a class="navigation-link" href="ueber_uns.html">Über uns</a></li>
                     <li><a class="navigation-link" href="kontakt.html">Kontakt</a></li>
+                    <form class="form-container">
+                        <input id="button" type="submit" value="Einloggen">
+                    </form>
                 </ul>
             </nav>
 
@@ -44,7 +50,7 @@
                     </article>
                     <article class="geschaeftsfuehrerinnen">
                         <H2>Geschäftsführer:innen:</H2>
-                        <P>Aglaja Bohm <br> Abegglen <br> Haj-Hassan <br> Nadia Giliberti</P>
+                        <P>Aglaja Bohm <br> Anna Abegglen <br> Haj-Hassan <br> Nadia Giliberti</P>
 
                         <P>Gründung 2023</P>
                         <P>© Copyright NARA GmbH, 3007 Bern, Schweiz</P>
@@ -67,8 +73,9 @@
                     <li><a class="footer-link" href="kontakt.html">Kontakt</a></li>
                     <li><a class="footer-link" href="impressum.html">Impressum</a></li>
                 </ul>
+                <img src="Images/Alle Seiten/00_instagram.svg" alt="Icon Instagram">
+                <img src="Images/Alle Seiten/00_linkedin.svg" alt="Icon Linkedin">
             </nav>
-           
         </footer>
 
     </div>
