--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
         <header class="header">
 
             <nav class="navigation container">
+                <a href="index.html">
+                    <img src="Images/Alle Seiten/00_logo_nara.svg" alt="Logo Nara" class="naralogo">
+                </a>
                 <ul class="navigation-list">
                     <li><a class="navigation-link" href="angebot.html">Angebot</a></li>
                     <li><a class="navigation-link" href="ueber_uns.html">Über uns</a></li>
                     <li><a class="navigation-link" href="kontakt.html">Kontakt</a></li>
+                    <form class="form-container">
+                        <input id="button" type="submit" value="Einloggen">
+                    </form>
                 </ul>
             </nav>
 
@@ -28,8 +34,8 @@
 
 
         <main class="main">
-            <img src="Startseite/01_startseite_header.svg" alt="headerbild" class="headerbild">
-            <img src="Startseite/01_startseite_planet_erde_icon.svg" alt="welt" class="imgwelt">
+            <img src="Images/Startseite/01_startseite_header.svg" alt="headerbild" class="headerbild">
+            <img src="Images/Startseite/01_startseite_planet_erde_icon.svg" alt="welt" class="imgwelt">
 
             <div class="container">
                 <h1> NARA - Günstig für dich, gut für die Welt</h1>
@@ -50,7 +56,7 @@
                     <p>Wir möchten zum Umdenken anregen und wollen, dass zukünftig die übergrosse Kartoffel und die
                         krumme
                         Rübe mit in den Kochtopf kommen. #innerewertezählen</p>
-                    <img src="Alle Seiten/00_trennstrich.svg" alt="00_trennstrich">
+                    <img src="Images/Alle Seiten/00_trennstrich.svg" alt="00_trennstrich">
                 </article>
 
                 <article class="article3">
@@ -66,7 +72,7 @@
                         zusammenstellen. Sie begleitet dich während des Kochens und gibt dir zwischen den einzelnen
                         Schritten
                         hilfreiche Tipps.</p>
-                    <img src="Alle Seiten/00_trennstrich.svg" alt="00_trennstrich">
+                    <img src="Images/Alle Seiten/00_trennstrich.svg" alt="00_trennstrich">
                 </article>
 
                 <article>
@@ -85,6 +91,8 @@
                     <li><a class="footer-link" href="kontakt.html">Kontakt</a></li>
                     <li><a class="footer-link" href="impressum.html">Impressum</a></li>
                 </ul>
+                <img src="Images/Alle Seiten/00_instagram.svg" alt="Icon Instagram" class="instagram">
+                <img src="Images/Alle Seiten/00_linkedin.svg" alt="Icon Linkedin" class="linkedin">
             </nav>
         </footer>
 
