--- a/ueber_uns.html
+++ b/ueber_uns.html
@@ -17,13 +17,19 @@
         <header class="header">
 
             <nav class="navigation container">
+                <a href="index.html">
+                    <img src="Images/Alle Seiten/00_logo_nara.svg" alt="Logo Nara" class="naralogo">
+                </a>
                 <ul class="navigation-list">
                     <li><a class="navigation-link" href="angebot.html">Angebot</a></li>
                     <li><a class="navigation-link" href="ueber_uns.html">Über uns</a></li>
                     <li><a class="navigation-link" href="kontakt.html">Kontakt</a></li>
+                    <form class="form-container">
+                        <input id="button" type="submit" value="Einloggen">
+                    </form>
                 </ul>
             </nav>
-
+            
         </header>
 
         <main class="main">
@@ -83,9 +89,11 @@
                     <li><a class="footer-link" href="kontakt.html">Kontakt</a></li>
                     <li><a class="footer-link" href="impressum.html">Impressum</a></li>
                 </ul>
+                <img src="Images/Alle Seiten/00_instagram.svg" alt="Icon Instagram" class="instagram">
+                <img src="Images/Alle Seiten/00_linkedin.svg" alt="Icon Linkedin" class="linkedin">
             </nav>
         </footer>
-
+        
     </div>
 </body>
 
