--- a/Angebot.html
+++ b/Angebot.html
@@ -15,11 +15,18 @@
 
         <header class="header">
 
+
             <nav class="navigation container">
+                <a href="index.html">
+                    <img src="Images/Alle Seiten/00_logo_nara.svg" alt="Logo Nara" class="naralogo">
+                </a>
                 <ul class="navigation-list">
                     <li><a class="navigation-link" href="angebot.html">Angebot</a></li>
                     <li><a class="navigation-link" href="ueber_uns.html">Über uns</a></li>
                     <li><a class="navigation-link" href="kontakt.html">Kontakt</a></li>
+                    <form class="form-container">
+                        <input id="button" type="submit" value="Einloggen">
+                    </form>
                 </ul>
             </nav>
 
@@ -49,7 +56,7 @@
                         #diversity</p>
                 </article>
 
-            <img src="Images/Alle Seiten/00_trennstrich.svg" alt="trennstrich" class="trennstrich">
+                <img src="Images/Alle Seiten/00_trennstrich.svg" alt="trennstrich" class="trennstrich">
                 <article class="article2">
                     <h2> Ähnlich aber anders </h2>
                     <p>Anders als ähnliche Plattformen bieten wir ausschliesslich Lebensmittel zum Kochen und keine
@@ -58,7 +65,7 @@
                         Betriebes einsehen und deinem Warenkorb hinzufügen.</p>
                 </article>
 
-<img src="Images/Alle Seiten/00_trennstrich.svg" alt="trennstrich" class="trennstrich">
+                <img src="Images/Alle Seiten/00_trennstrich.svg" alt="trennstrich" class="trennstrich">
 
                 <article class="article3">
                     <h2> Wie funktioniert NARA? </h2>
@@ -102,6 +109,8 @@
                     <li><a class="footer-link" href="kontakt.html">Kontakt</a></li>
                     <li><a class="footer-link" href="impressum.html">Impressum</a></li>
                 </ul>
+                <img src="Images/Alle Seiten/00_instagram.svg" alt="Icon Instagram" class="instagram">
+                <img src="Images/Alle Seiten/00_linkedin.svg" alt="Icon Linkedin" class="linkedin">
             </nav>
         </footer>
     </div>
