--- a/Kontakt.html
+++ b/Kontakt.html
@@ -16,11 +16,16 @@
         <header class="header">
 
             <nav class="navigation container">
+                <a href="index.html">
+                    <img src="Images/Alle Seiten/00_logo_nara.svg" alt="Logo Nara" class="naralogo">
+                </a>
                 <ul class="navigation-list">
-
                     <li><a class="navigation-link" href="angebot.html">Angebot</a></li>
                     <li><a class="navigation-link" href="ueber_uns.html">Über uns</a></li>
                     <li><a class="navigation-link" href="kontakt.html">Kontakt</a></li>
+                    <form class="form-container">
+                        <input id="button" type="submit" value="Einloggen">
+                    </form>
                 </ul>
             </nav>
 
@@ -47,7 +52,7 @@
                         <input type="email" id="email" placeholder="max.muster@outlook.ch" required>
                         <label for="nachricht">Nachricht</label>
                         <textarea id="nachricht" required></textarea>
-                        <input id="sendenButton" type="submit" value="senden">
+                        <input id="button" type="submit" value="senden">
                     </form>
                 </section>
 
@@ -61,15 +66,16 @@
 
         </main>
                 <img src="Images/Kontakt/04_kontakt_footer.svg" class="footerbild" alt="footer">
-        <footer class="footer">
-            <nav class="navigation container">
-                <ul class="footer-list">
-                    <li><a class="footer-link" href="kontakt.html">Kontakt</a></li>
-                    <li><a class="footer-link" href="impressum.html">Impressum</a></li>
-                </ul>
-            </nav>
-
-        </footer>
+                <footer class="footer">
+                    <nav class="navigation container">
+                        <ul class="footer-list">
+                            <li><a class="footer-link" href="kontakt.html">Kontakt</a></li>
+                            <li><a class="footer-link" href="impressum.html">Impressum</a></li>
+                        </ul>
+                        <img src="Images/Alle Seiten/00_instagram.svg" alt="Icon Instagram" class="instagram">
+                        <img src="Images/Alle Seiten/00_linkedin.svg" alt="Icon Linkedin" class="linkedin">
+                    </nav>
+                </footer>
 
     </div>
 
