impressum und kontakt

--- a/Kontakt.html
+++ b/Kontakt.html
@@ -30,7 +30,7 @@
             </nav>
 
         </header>
-        <img src="Images/Kontakt/04_kontakt_header.svg" class="headerbild" alt="header">
+        <img src="Images/Kontakt/04_kontakt_header.png" class="headerbild" alt="header">
         <main class="main">
             <div class="container">
                 <h1>Kontakt</h1>
@@ -65,7 +65,7 @@
 
 
         </main>
-                <img src="Images/Kontakt/04_kontakt_footer.svg" class="footerbild" alt="footer">
+                <img src="Images/Kontakt/04_kontakt_footer.png" class="footerbild" alt="footer">
                 <footer class="footer">
                     <nav class="navigation container">
                         <ul class="footer-list">
