--- a/Impressum.html
+++ b/Impressum.html
@@ -31,7 +31,7 @@
 
         </header>
 
-        <img src="Images/Impressum/05_impressum_header.svg" class="headerbild" alt="header">
+        <img src="Images/Impressum/05_impressum_header.png" class="headerbild" alt="header">
         <img src="Images/Impressum/05_impressum_lädeli.svg" class="laedeli" alt="laden">
 
        
@@ -66,7 +66,7 @@
             </div>
         </main>
 
-        <img src="Images/Impressum/05_impressum_footer.svg" class="footerbild" alt="footer">
+        <img src="Images/Impressum/05_impressum_footer.png" class="footerbild" alt="footer">
         <footer class="footer">
             <nav class="navigation container">
                 <ul class="footer-list">
