--- a/Angebot.html
+++ b/Angebot.html
@@ -25,7 +25,7 @@
                     <li><a class="navigation-link" href="ueber_uns.html">Über uns</a></li>
                     <li><a class="navigation-link" href="kontakt.html">Kontakt</a></li>
                     <form class="form-container">
-                        <input id="button" type="submit" value="Einloggen">
+                        <button class="einloggen"> einloggen </button>
                     </form>
                 </ul>
             </nav>
