--- a/Kontakt.html
+++ b/Kontakt.html
@@ -24,7 +24,7 @@
                     <li><a class="navigation-link" href="ueber_uns.html">Über uns</a></li>
                     <li><a class="navigation-link" href="kontakt.html">Kontakt</a></li>
                     <form class="form-container">
-                        <button class="button"> einloggen </button>
+                        <button class="einloggen"> einloggen </button>
                     </form>
                 </ul>
             </nav>
@@ -52,7 +52,7 @@
                         <input type="email" id="email" placeholder="max.muster@outlook.ch" required>
                         <label for="nachricht">Nachricht</label>
                         <textarea id="nachricht" required></textarea>
-                        <input class="button" type="submit" value="senden">
+                        <input class="sendenbutton" type="submit" value="senden">
                     </form>
                 </section>
 
