--- a/Angebot.html
+++ b/Angebot.html
@@ -34,6 +34,7 @@
 
         <main class="main">
             <img src="Images/Angebot/02_angebot_header.png" alt="header_grün" class="bildheader">
+            <img src="Images/Angebot/02_angebot_warenkorb.svg" alt="warenkorb" class="warenkorb">
             <div class="container">
 
                 <h1>Dein nachhaltiger Lebensmittel-Einkauf leicht gemacht</h1>
@@ -46,13 +47,15 @@
                         Bauernhof deinen Warenkorb mit regionalen vergünstigten Lebensmitteln füllen kannst.
                         #ausbernfürbern</p>
 
+                    <button class="partner"> Entdecke unsere partner:innen in der Region </button>
+
                     <p>Viele Lebensmittel werden verschwendet, nur weil sie nicht der Verkaufsnorm entsprechen oder weil
-                        das
-                        Mindesthaltbarkeitsdatum abgelaufen ist. Wir feiern die Verschiedenheit der Nahrungsmittel und
-                        wollen
-                        Food Waste durch ein Umdenken zu einer neuen Qualitätsdefinition minimieren, so dass in Zukunft
-                        die
-                        übergrosse Kartoffel und die krumme Karotte auch mit in den Kochtopf dürfen. #innerewertezählen
+                        das Mindesthaltbarkeitsdatum abgelaufen ist. </p>
+
+                    <p> Wir feiern die Verschiedenheit der Nahrungsmittel und wollen Food Waste durch ein Umdenken zu
+                        einer neuen Qualitätsdefinition minimieren, so dass in
+                        Zukunft die übergrosse Kartoffel und die krumme Karotte auch mit in den Kochtopf dürfen.
+                        #innerewertezählen
                         #diversity</p>
                 </article>
 
@@ -70,15 +73,20 @@
                 <article class="article3">
                     <h2> Wie funktioniert NARA? </h2>
                     <ol>
-                        <li>Wähle deine gewünschten Händler:innen</li>
-                        <li>Stell dir mühelos deine Bestellung zusammen</li>
-                        <li>Bestellung abschliessen</li>
-                        <li>Du erhältst nach kurzer Zeit die Abholbenachrichtigung</li>
+                        <li class="schritte">Wähle deine gewünschten Händler:innen</li>
+
+                        <button class="platform">Entdecke unsere Platform</button>
+
+                        <li class="schritte">Stell dir mühelos deine Bestellung zusammen</li>
+                        <li class="schritte">Bestellung abschliessen</li>
+                        <li class="schritte">Du erhältst nach kurzer Zeit die Abholbenachrichtigung</li>
                     </ol>
 
                     <p>Schliesse dich uns an und entdecke. wie einfach es sein kann nachhaltig zu leben und gleichzeitig
                         Geld zu
                         sparen.</p>
+
+                    <button class="registrieren">hier kannst du dich kostenlos registrieren</button>
                 </article>
 
                 <img src="Images/Alle Seiten/00_trennstrich.svg" alt="trennstrich" class="trennstrich">
@@ -86,9 +94,9 @@
                 <article class="article4">
                     <h2>Das ist uns wichtig</h2>
                     <ul>
-                        <li>Nachhaltigkeit soll und muss für alle zugänglich sein</li>
-                        <li>Verschwendung bekämpfen; Jedes Lebensmittel ist wertvoll</li>
-                        <li>Umwelt schützen</li>
+                        <li class="werte">Nachhaltigkeit soll und muss für alle zugänglich sein</li>
+                        <li class="werte">Verschwendung bekämpfen; Jedes Lebensmittel ist wertvoll</li>
+                        <li class="werte">Umwelt schützen</li>
                     </ul>
 
                     <p>Du willst mehr erfahren? Auf unserer Über uns Seite findest du weitere Informationen</p>
@@ -99,8 +107,26 @@
                 <article class="article5">
                     <h2> Unsere Partner:innen in deiner Umgebung</h2>
                     <p> Gib hier deine Postleitzahl ein und entdecke alle unsere Betriebe in deiner Umgebung </p>
+
+                    <p>PLZ</p>
+                    <input type="text" id="plz" name="plz" placeholder="z.B. 3000">
+
+                    <p>Händler:innen in 3000 Bern:</p>
+                    <ul>
+                        <li class="haendler">Rüedu Länggasse</li>
+                        <li class="haendler">Migros Marktgasse</li>
+                        <li class="haendler">Coop Marktgasse</li>
+                        <li class="haendler">Hofladen Liebefeld</li>
+
+                    </ul>
+
+                    <button class="allehaendler">komplette Liste</button>
+
+                    <img src="Images/Angebot/02_angebot_karte.png" alt="Karte Bern" class="karte_bern">
                 </article>
             </div>
+            <img src="Images/Angebot/02_angebot_spinat.svg" alt="spinat" class="spinat">
+            <img src="Images/Angebot/02_angebot_footer.svg.png" alt="footer_grün" class="bildfooter">
 
         </main>
         <footer class="footer">
