--- a/Angebot.html
+++ b/Angebot.html
@@ -87,6 +87,8 @@
                         sparen.</p>
 
                     <button class="registrieren">hier kannst du dich kostenlos registrieren</button>
+
+                    <img src="Images/Angebot/02_angebot_gemüseteller.svg" alt="bild_gemüseteller" class="gemueseteller">
                 </article>
 
                 <img src="Images/Alle Seiten/00_trennstrich.svg" alt="trennstrich" class="trennstrich">
