danke jan ah dere stell

--- a/index.html
+++ b/index.html
@@ -84,15 +84,17 @@
                 </article>
 
                 <article class="article3">
-                    <h2>Ähnlich, aber anders</h2>
-                    <p>Bei uns erhältst du genau das, was du bestellt hast. #samesamebutdifferent</p>
-                    <form class="form-container">
-                        <input class="buttons" id="warum-button" type="submit" value="Erfahre warum">
-                    </form>
+                    <article class="anders">
+                        <h2>Ähnlich, aber anders</h2>
+                        <p>Bei uns erhältst du genau das, was du bestellt hast. #samesamebutdifferent</p>
+                        <form class="form-container">
+                            <input class="buttons" id="warum-button" type="submit" value="Erfahre warum">
+                        </form>
+                    </article>
                     <img src="Images/Startseite/01_startseite_menü.svg" alt="Menü" class="menue1">
-                    <img src="Images/Alle Seiten/00_trennstrich.svg" alt="00_trennstrich">
-
                 </article>
+
+                <img src="Images/Alle Seiten/00_trennstrich.svg" alt="00_trennstrich">
 
                 <article class="article4">
                     <h2>Begrüsse Naraly, unsere KI-basierte Chef-Köchin</h2>
