--- a/index.html
+++ b/index.html
@@ -117,19 +117,20 @@
                     <p>Aktuell sind wir vor allem in der Region Bern vertreten. Wir arbeiten fleissig daran, NARA in
                         anderen
                         Ortschaften einzuführen und unsere Reichweite zu vergrössern. #ausbernfürbern</p>
-                        <div class="partner">
-                        <img src="Images/Startseite/01_startseite_denner.png" alt="01_startseite_denner" id="denner"> 
+                    <div class="partner">
+                        <img src="Images/Startseite/01_startseite_denner.png" alt="01_startseite_denner" id="denner">
                         <img src="Images/Startseite/01_startseite_rüedu.png" alt="01_startseite_rüedu" id="rüedu">
-                        <img src="Images/Startseite/01_startseite_alnatura.png"alt="01_startseite_alnatura" id="alnatura">
+                        <img src="Images/Startseite/01_startseite_alnatura.png" alt="01_startseite_alnatura"
+                            id="alnatura">
                         <img src="Images/Startseite/01_startseite_migros.png" alt="01_startseite_migros" id="migros">
-                        </div>
+                    </div>
 
                     <p>Was, du findest hier deinen Betrieb nicht? Registriere dich und werde Teil von NARA.</p>
                     <form class="form-container">
                         <input class="buttons" id="betrieb-button" type="submit" value="Betrieb registrieren">
                     </form>
                 </article>
-               
+
 
             </div>
             <div class="footerbild">
@@ -138,7 +139,7 @@
 
                 <img src="Images/Startseite/01_startseite_footer.png" alt="footer grün" class="footer-grün">
             </div>
-            
+
 
 
         </main>
