Über uns bearbeitet

--- a/ueber_uns.html
+++ b/ueber_uns.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="CSS/ueber_uns.css">
 </head>
 
-
 <body>
 
     <div>
@@ -33,6 +32,11 @@
         </header>
 
         <main class="main">
+            <img src="Images/Über uns/03_über uns_header.svg" alt="headerbild" class="headerbild">
+            <img src="Images/Über uns/03_über uns_einkaufsladen.svg" alt="einkaufsladen" class="imgeinkaufsladen">
+            <form class="form-container">
+            </form>
+
             <div class="container">
                 <h1>Über uns</h1>
                 <article class="article1">
@@ -44,6 +48,14 @@
                         und Lieferung minimal ist. Gleichzeitig gehen wir mit unserem Angebot gegen Food
                         Waste vor.</p>
                 </article>
+
+                <div class="video-container">
+                <video controls>
+                    <source src="Video/Video.mp4" type="video/mp4" alt="video" class="video">
+                  </video>
+                  <img src="Images/Über uns/03_über uns_tanne.svg" alt="tanne" class="imgtanne">
+                  <img src="Images/Über uns/03_über uns_baum_mit_büsche.svg" alt="baum" class="imgbaum">
+                </div>
 
                 <h2>Lass uns gemeinsam gutes Essen neu definieren</h2>
                 <p>Jedes Lebensmittel, egal wie es aussieht, kann serviert werden und ist es wert, zu
