--- a/ueber_uns.html
+++ b/ueber_uns.html
@@ -57,14 +57,28 @@
                   <img src="Images/Über uns/03_über uns_baum_mit_büsche.svg" alt="baum" class="imgbaum">
                 </div>
 
+                <img src="Images/Alle Seiten/00_trennstrich.svg" alt="00_trennstrich" class="trennstrich">
+
+                <article class="article2">
                 <h2>Lass uns gemeinsam gutes Essen neu definieren</h2>
                 <p>Jedes Lebensmittel, egal wie es aussieht, kann serviert werden und ist es wert, zu
                     verwenden. Durch unser Engagement werden regionale Bauern und Bäuerinnen
                     unterstützt. Unsere App gibt allen die Chance aktiv zu werden und unsere wichtigste
                     Ressource, die Erde, zu schützen. Werde Teil unserer Community!
                     #innerewertezählen</p>
+                    <form class="form-container">
+                        <input class="buttons" id="front-button" type="submit" value="Jetzt registrieren">
+                    </form>
+                </article>
 
+                <img src="Images/Alle Seiten/00_trennstrich.svg" alt="00_trennstrich" class="trennstrich">
+
+                <article class="article3">
                 <h2>Team: bunt aufgestellt</h2>
+                 </article>
+
+                 <article class="article4">
+                    <img src="Images/Über uns/03_über uns_rabih.svg" alt="rabih" class="imgrabih">
                 <p>Rabih ist mit seiner Expertise für Fotografie und
                     Gestaltung der kreative Kopf des Unternehmens. Mit
                     seinem Auge fürs Detail, die Natur und den Menschen
@@ -72,20 +86,29 @@
                     Projekte ein. In seiner Freizeit verbringt er gerne Zeit
                     mit seinen Freund:innen und ist begeisterter Sportler,
                     vor allem in der Natur.</p>
+                </article>
 
+                <article class="article5">
+                    <img src="Images/Über uns/03_über uns_anna.svg" alt="anna" class="imganna">
                 <p>Anna ist strategische Multitaskerin und übernimmt die
                     organisatorischen Aufgaben im Team. Mit umfangreichen
                     Erfahrungen im Bereich von Sustainable Business bringt
                     sie Wissen und Expertise für nachhaltige Lösungen und
                     Strategien mit. Als Ausgleich dient ihr das Tanzen und
                     ihre grosse Liebe: ihr Hund Azra.</p>
+                </article>
 
+                <article class="article6">
+                    <img src="Images/Über uns/03_über uns_nadia.svg" alt="nadia" class="imgnadia">
                 <p>Nadia ist unsere Marketing-Expertin, aber auch in der
                     Gestaltung und Zusammenarbeit mit Partnern eine
                     wertvolle Ressource. Neben dem Berufsalltag entwirft
                     sie gerne nachhaltige Rezepte für Freunde und Familie
                     und unternimmt aufregende Ausflüge in den Bergen.</p>
+                </article>
 
+                <article class="article7">
+                    <img src="Images/Über uns/03_über uns_aglaja.svg" alt="aglaja" class="imgaglaja">
                 <p>Aglaja ist die treibende Kraft hinter der
                     Unternehmenskommunikation, sowohl intern als auch
                     extern. Mit ihrer aufgestellten, positiven Art sorgt sie für
@@ -93,8 +116,35 @@
                     Unternehmen zu unseren Kund:innen her. Auch sie ist
                     leidenschaftliche Tänzerin und hat im letzten Jahr das
                     Boxen für sich entdeckt.</p>
-            </div>
+                </article>
+
+                <img src="Images/Alle Seiten/00_trennstrich.svg" alt="00_trennstrich" class="trennstrich">
+
+                <article class="article8">
+                <h2>Hintergrund: Vier junge Köpfe, ein gemeinsames Ziel</h2>
+                <p>Bei Gesprächen in unserem Umfeld haben wir gemerkt: viele Studierende wollen, 
+                    aber können sich nachhaltige Lebensmittel nicht leisten. Dieser Umstand inspirierte 
+                    die Gründung unseres Start-ups: Menschen mit tiefem Einkommen, insbesondere Studierende 
+                    wie wir selbst, sollen ihren Einkauf schnell und komfortabel durchführen können — und den 
+                    Supermarkt mit gutem Gewissen verlassen.</p>
+                <p>Wie funktionierts? Lebensmittel die optisch nicht der Norm entsprechen oder von denen 
+                    ein Detailhändler zu viel eingekauft hat, bieten wir auf unserer Plattform vergünstigt an. 
+                    Die Produkte stammen aus der regionalen Landwirtschaft und landen in all ihrer Verschiedenheit 
+                    schliesslich zum Spotpreis in deinem Einkaufswagen. Ein Einkauf mit NARA verbindet Engagement 
+                    mit Genuss!</p>
+                        <form class="form-container">
+                            <input class="buttons" id="front-button" type="submit" value="Entdecke unsere Plattform">
+                        </form>
+                    </article>
+                </div>
+               
+            <div class="footerbild">
+                <img src="Images/Über uns/03_über uns_footer.svg" alt="footerbild" class="footerbild">
+                <img src="Images/Über uns/03_über uns_pfanne_kochen.svg" alt="pfanne" class="imgpfanne">
+                <img src="Images/Über uns/03_über uns_brokkoli.svg" alt="brokkoli" class="imgbrokkoli">
+             </div>
         </main>
+
         <footer class="footer">
             <nav class="navigation container">
                 <ul class="footer-list">
