--- a/Kontakt.html
+++ b/Kontakt.html
@@ -34,17 +34,11 @@
         <main class="main">
             <div class="container">
                 <h1>Kontakt</h1>
+                <img src="Images/Kontakt/04_kontakt_megaphone.svg" class="megaphon" alt="megaphon">
                 <h2 class="schreibeuns"> Schreibe uns!</h2>
 
-                <section class="flex-column">
-                    <article class="naragmbh">
-                        <h2>NARA GmbH</h2>
-                        <p>Holzikofenweg 8 </p>
-                        <p>3007 Bern</p>
-                        <p>Telefon +41 (0)32 765 43 21</p>
-                        <P>E-Mail: info@nara.ch</P>
-                        <P>www.nara.ch</P>
-                    </article>
+                <section class="flex-row">
+
                     <form class="form-container">
                         <label for="betreff">Betreff</label>
                         <input type="text" id="betreff">
@@ -54,13 +48,22 @@
                         <textarea id="nachricht" required></textarea>
                         <input class="sendenbutton" type="submit" value="senden">
                     </form>
+                    <article class="naragmbh">
+                        <h2>NARA GmbH</h2>
+                        <p>Holzikofenweg 8 </p>
+                        <p>3007 Bern</p>
+                        <p>Telefon +41 (0)32 765 43 21</p>
+                        <P>E-Mail: info@nara.ch</P>
+                        <P>www.nara.ch</P>
+                    </article>
                 </section>
 
             </div>
 
-            <img src="Images/Kontakt/04_kontakt_megaphone.svg" class="megaphon" alt="megaphon">
-            <img src="Images/Kontakt/04_kontakt_grüne_bohnen.svg" class="bohnen" alt="grüne bohnen">
+
             <img src="Images/Kontakt/04_kontakt_spargeln.svg" class="spargeln" alt="spargeln">
+            <img src="Images/Kontakt/04_kontakt_grüne_bohnen.svg" class="bohnen" alt="grüne bohnen">
+    
 
 
 
