--- a/Impressum.html
+++ b/Impressum.html
@@ -31,14 +31,18 @@
 
         </header>
 
-        <img src="Images/Impressum/05_impressum_header.png" class="headerbild" alt="header">
+        <div class="headerbild"> 
+            <img src="Images/Impressum/05_impressum_header.png" class="headerbild" alt="header">
+            <h1> Impressum</h1>
+        </div>
+
         <img src="Images/Impressum/05_impressum_lädeli.svg" class="laedeli" alt="laden">
 
        
 
         <main class="main">
             <div class="container">
-                <h1> Impressum</h1>
+
                 <section class="flex-column">
                     <article class="naragmbh">
                         <h2>NARA GmbH</h2>
