--- a/Kontakt.html
+++ b/Kontakt.html
@@ -30,17 +30,27 @@
             </nav>
 
         </header>
-        <img src="Images/Kontakt/04_kontakt_header.png" class="headerbild" alt="header">
-        <h1>Kontakt</h1>
+
+        <div class="headerbild"> 
+            <img src="Images/Kontakt/04_kontakt_header.png" class="headerbild">
+            <h1>Kontakt</h1>
+        </div>
+
+
+        
         <main class="main">
             <div class="container">
 
                 <img src="Images/Kontakt/04_kontakt_megaphone.svg" class="megaphon" alt="megaphon">
-                <h2 class="schreibeuns"> Schreibe uns!</h2>
 
+                    <article class="naragmbh">
+                        <h2>NARA GmbH</h2>
+                        <p>Holzikofenweg 8 <br> 3007 Bern <br> Telefon +41 (0)32 765 43 21 <br> E-Mail: info@nara.ch <br> www.nara.ch </p>
+                    </article>
                 <section class="flex-row">
 
                     <form class="form-container">
+                        <h2 class="schreibeuns"> Schreibe uns!</h2>
                         <label for="betreff">Betreff</label>
                         <input type="text" id="betreff">
                         <label for="email">E-Mail</label>
@@ -49,14 +59,7 @@
                         <textarea id="nachricht" required></textarea>
                         <input class="sendenbutton" type="submit" value="senden">
                     </form>
-                    <article class="naragmbh">
-                        <h2>NARA GmbH</h2>
-                        <p>Holzikofenweg 8 </p>
-                        <p>3007 Bern</p>
-                        <p>Telefon +41 (0)32 765 43 21</p>
-                        <P>E-Mail: info@nara.ch</P>
-                        <P>www.nara.ch</P>
-                    </article>
+
                 </section>
 
             </div>
