--- a/index.html
+++ b/index.html
@@ -32,12 +32,14 @@
         </header>
 
         <main class="main">
+            <div class="front-dings">
             <img src="Images/Startseite/01_startseite_header.png" alt="headerbild" class="headerbild">
             <img src="Images/Startseite/01_startseite_planet_erde_icon.svg" alt="welt" class="imgwelt">
             <img src="Images/Startseite/01_startseite_grünes_herz.svg" alt="grünes_herz" class="imgherz">
             <form class="form-container">
                 <input class="buttons" id="front-button" type="submit" value="Registriere dich">
             </form>
+        </div>
 
             <div class="container">
                 <h1> NARA - Günstig für dich, <br>
