--- a/Impressum.html
+++ b/Impressum.html
@@ -15,18 +15,21 @@
 
         <header class="header">
 
+
             <nav class="navigation container">
                 <a href="index.html">
                     <img src="Images/Alle Seiten/00_logo_nara.svg" alt="Logo Nara" class="naralogo">
                 </a>
-                <ul class="navigation-list">
-                    <li><a class="navigation-link" href="angebot.html">Angebot</a></li>
-                    <li><a class="navigation-link" href="ueber_uns.html">Über uns</a></li>
-                    <li><a class="navigation-link" href="kontakt.html">Kontakt</a></li>
+                <div class="navigation-list">
+                    <ul class="seiten">
+                        <li><a class="navigation-link" href="angebot.html">Angebot</a></li>
+                        <li><a class="navigation-link" href="ueber_uns.html">Über&nbsp;uns</a></li>
+                        <li><a class="navigation-link" href="kontakt.html">Kontakt</a></li>
+                    </ul>
                     <form class="form-container">
                         <button class="einloggen"> einloggen </button>
                     </form>
-                </ul>
+                </div>
             </nav>
 
         </header>
@@ -84,5 +87,6 @@
 
     </div>
 </body>
+
 
 </html>
