--- a/Angebot.html
+++ b/Angebot.html
@@ -36,10 +36,14 @@
 
         <main class="main">
             <img src="Images/Angebot/02_angebot_header.png" alt="header_grün" class="bildheader">
-            <img src="Images/Angebot/02_angebot_warenkorb.svg" alt="warenkorb" class="warenkorb">
-            <div class="container">
 
-                <h1>Dein nachhaltiger Lebensmittel-Einkauf leicht gemacht</h1>
+            <div class="container">
+                <div class="title">
+                    <h1>Dein nachhaltiger Lebensmittel-Einkauf leicht gemacht</h1>
+                    <img src="Images/Angebot/02_angebot_warenkorb.svg" alt="warenkorb" class="warenkorb">
+
+                </div>
+
                 <article class="article1">
 
 
