--- a/index.html
+++ b/index.html
@@ -45,16 +45,15 @@
         </div>
 
             <div class="container">
-                <h1> NARA - Günstig für dich, <br>
-                    gut für die Welt</h1>
+                <h1> NARA - Günstig für dich, 
+                    gut&nbsp;für die Welt</h1>
 
 
 
                 <article class="article1">
 
                     <h2>Dein nachhaltiger Lebensmittel-Einkauf leicht gemacht</h2>
-                    <p>Lade dir die App herunter oder trete über die Online-Plattform der NARACommunity bei.
-                        #nachhaltig
+                    <p>Lade dir die App herunter oder trete über die Online-Plattform der NARACommunity bei.#nachhaltig
                         #günstig #gesund</p>
 
 
@@ -121,11 +120,11 @@
                         anderen
                         Ortschaften einzuführen und unsere Reichweite zu vergrössern. #ausbernfürbern</p>
                     <div class="partner">
-                        <img src="Images/Startseite/01_startseite_denner.png" alt="01_startseite_denner" id="denner">
-                        <img src="Images/Startseite/01_startseite_rüedu.png" alt="01_startseite_rüedu" id="rüedu">
+                        <img src="Images/Startseite/01_startseite_denner.png" alt="01_startseite_denner" class="logopartner">
+                        <img src="Images/Startseite/01_startseite_rüedu.png" alt="01_startseite_rüedu" class="logopartner">
                         <img src="Images/Startseite/01_startseite_alnatura.png" alt="01_startseite_alnatura"
-                            id="alnatura">
-                        <img src="Images/Startseite/01_startseite_migros.png" alt="01_startseite_migros" id="migros">
+                            class="logopartner">
+                        <img src="Images/Startseite/01_startseite_migros.png" alt="01_startseite_migros" class="logopartner">
                     </div>
 
                     <p>Was, du findest hier deinen Betrieb nicht? Registriere dich und werde Teil von NARA.</p>
@@ -138,7 +137,7 @@
             </div>
             <div class="footerbild">
                 <img src="Images/Startseite/01_startseite_rote_zwiebel.svg" alt="zwiebel" class="imgzwiebel">
-                <img src="Images/Startseite/01_startseite_gemüse.svg" alt="gemüse" class="startseite-gemüse">
+                <img src="Images/Startseite/01_startseite_gemüse.svg" alt="gemüse" class="startseite-gemuese">
 
                 <img src="Images/Startseite/01_startseite_footer.png" alt="footer grün" class="footer-grün">
             </div>
