--- a/Impressum.html
+++ b/Impressum.html
@@ -34,17 +34,18 @@
 
         </header>
 
-        <div class="headerbild"> 
+        <div class="headerbild">
             <img src="Images/Impressum/05_impressum_header.png" class="headerbild" alt="header">
-            <h1> Impressum</h1>
+
         </div>
 
         <img src="Images/Impressum/05_impressum_lädeli.svg" class="laedeli" alt="laden">
 
-       
+
 
         <main class="main">
             <div class="container">
+                <h1> Impressum</h1>
 
                 <section class="flex-column">
                     <article class="naragmbh">
@@ -66,7 +67,8 @@
                             Unternehmen finanziert sich grösstenteils über die Platzierung von verschiedenen
                             Unternehmen auf ihrer Website. Mit Hauptsitz in Bern umfängt NARA mittlerweile 8
                             Mitarbeitende und plant zurzeit eine Vergrösserung ihres Unternehmens.</P>
-                            <img src="Images/Impressum/05_impressum_backen.svg" class="backen" alt="sack mehl und teigroller">
+                        <img src="Images/Impressum/05_impressum_backen.svg" class="backen"
+                            alt="sack mehl und teigroller">
                     </article>
                 </section>
 
