--- a/Angebot.html
+++ b/Angebot.html
@@ -35,11 +35,14 @@
         </header>
 
         <main class="main">
-            <img src="Images/Angebot/02_angebot_header.png" alt="header_grün" class="bildheader">
+            <div class="headerbild">
+                <img src="Images/Angebot/02_angebot_header.png" alt="header_grün" class="bildheader">
+                <h1>Dein nachhaltiger Lebensmittel-Einkauf leicht gemacht</h1>
+            </div>
 
             <div class="container">
                 <div class="title">
-                    <h1>Dein nachhaltiger Lebensmittel-Einkauf leicht gemacht</h1>
+
                     <img src="Images/Angebot/02_angebot_warenkorb.svg" alt="warenkorb" class="warenkorb">
 
                 </div>
@@ -80,9 +83,9 @@
                     <h2> Wie funktioniert NARA? </h2>
                     <ol>
                         <li class="schritte">Wähle deine gewünschten Händler:innen</li>
-
-                        <button class="platform">Entdecke unsere Platform</button>
-
+                        <div>
+                            <button class="platform">Entdecke unsere Platform</button>
+                        </div>
                         <li class="schritte">Stell dir mühelos deine Bestellung zusammen</li>
                         <li class="schritte">Bestellung abschliessen</li>
                         <li class="schritte">Du erhältst nach kurzer Zeit die Abholbenachrichtigung</li>
